hw05/test/zm-outside-of-loop1.fmj
public int main() {
    int n = 2;
    while (n >= 0)
      if (n<=8) break;
    break; // error
    return n;
}
